# supvan-cups

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  PROTOCOL.md  README.md  build-deb.sh  extract.sh  install.sh  katasymbol-printer-app.service  katasymbol.ppd  key-functions.js  supvan-printer-app.service  test_print.py
.github/workflows/: ci.yml
ci/: docker-entrypoint.sh  print-job.test  run-integration-test.sh
crates/ipp-printer-app/: Cargo.toml
crates/ipp-printer-app/src/: attributes.rs  device.rs  flags.rs  job.rs  lib.rs  mdns.rs  printer.rs  raster.rs  server.rs  state.rs  status.rs
crates/ipp-printer-app/tests/: discovery.rs  golden_ipp.rs
crates/katasymbol-app/: Cargo.toml
crates/katasymbol-app/src/: discover.rs  dither.rs  driver.rs  dump.rs  job.rs  main.rs  printer_device.rs  raster.rs  system.rs  util.rs
crates/katasymbol-backend/: Cargo.toml
crates/katasymbol-backend/src/: discover.rs  main.rs  print_job.rs
crates/katasymbol-cli/: Cargo.toml
crates/katasymbol-cli/src/: main.rs
crates/katasymbol-ffi/: Cargo.toml
crates/katasymbol-ffi/src/: lib.rs
crates/katasymbol-filter/: Cargo.toml  build.rs
crates/katasymbol-filter/src/: main.rs  raster.rs
crates/katasymbol-proto/: Cargo.toml
crates/katasymbol-proto/src/: bitmap.rs  buffer.rs  cmd.rs  compress.rs  error.rs  lib.rs  printer.rs  rfcomm.rs  speed.rs  status.rs
crates/katasymbol-proto/tests/: pipeline.rs
crates/pappl-rs/: Cargo.toml  build.rs
crates/pappl-rs/src/: device.rs  device_handle.rs  driver_data.rs  error.rs  flags.rs  job.rs  lib.rs  macros.rs  printer.rs  system.rs  util.rs
crates/pappl-sys/: Cargo.toml  build.rs  wrapper.h
crates/pappl-sys/src/: lib.rs
crates/supvan-app/: Cargo.toml
crates/supvan-app/src/: battery_provider.rs  ble_discover.rs  device.rs  discover.rs  dither.rs  driver.rs  dump.rs  ipp_job.rs  ipp_server.rs  job.rs  main.rs  mock.rs  models.rs  printer_device.rs  raster.rs  registrar.rs  system.rs  usb_discover.rs  util.rs
crates/supvan-cli/: Cargo.toml
crates/supvan-cli/examples/: material_probe.rs
crates/supvan-cli/src/: main.rs
crates/supvan-proto/: Cargo.toml  README.md
crates/supvan-proto/src/: bitmap.rs  ble.rs  bt_transport.rs  buffer.rs  cmd.rs  compress.rs  data.rs  error.rs  hidraw.rs  lib.rs  printer.rs  rfcomm.rs  spp_pipe.rs  status.rs  transport.rs  usb_transport.rs
crates/supvan-proto/tests/: pipeline.rs
data/: models.toml
docs/: CONFORMANCE.md  CUPS_ACCEPTANCE.md  DEPLOY.md  FIRMWARE.md  PROTOCOL.md
etc/: check-cups-browsed.sh  cups-cleanup.sh  cups-register.sh  supvan-printer-app.user.service
etc/dbus-1/system.d/: com.supvan.battery.conf
etc/udev/rules.d/: 70-supvan-t50.rules
pappl/: Makefile  katasymbol-printer-app.c
scripts/: capture_ipp_golden.sh  supvan-fw-check.py
tests/: run_all.sh
tests/fixtures/ipp/: README.md
