[workspace]
members = [
    "crates/supvan-proto",
    "crates/supvan-cli",
    "crates/pappl-sys",
    "crates/pappl-rs",
    "crates/supvan-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
supvan-proto = { path = "crates/supvan-proto" }
pappl-rs = { path = "crates/pappl-rs" }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
bitflags = "2"
