[workspace]
members = [
    "crates/supvan-proto",
    "crates/supvan-cli",
    "crates/supvan-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
supvan-proto = { path = "crates/supvan-proto" }
ipp-printer-app = "0.1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
bitflags = "2"
