[workspace]
members = [
    "crates/supvan-proto",
    "crates/supvan-cli",
    "crates/supvan-app",
]
resolver = "3"

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
supvan-proto = { path = "crates/supvan-proto" }
ipp-printer-app = "0.8.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
bitflags = "2"
async-trait = "0.1"
tokio = { version = "1", default-features = false }

