[package]
name = "ipp-printer-app"
version.workspace = true
edition.workspace = true
description = "IPP Everywhere printer-application framework for CUPS driverless printing"

[features]
default = ["mdns"]
mdns = ["dep:mdns-sd"]

[dependencies]
ipp = { version = "6", default-features = false }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
print_raster = "0.1"
bytes = "1"
http = "1"
log = { workspace = true }
bitflags = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
futures = "0.3"
num-traits = "0.2"
mdns-sd = { version = "0.19", optional = true }

[dev-dependencies]
ipp = { version = "6", default-features = false }
