[package]
name = "katasymbol-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "katasymbol-printer-app"
path = "src/main.rs"

[dependencies]
katasymbol-proto = { workspace = true }
pappl-sys = { path = "../pappl-sys" }
log = { workspace = true }
env_logger = { workspace = true }
dbus = "0.9"
libc = "0.2"
