[package]
name = "katasymbol-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "katasymbol"
path = "src/main.rs"

[dependencies]
katasymbol-proto.workspace = true
log.workspace = true
env_logger.workspace = true
clap = { version = "4", features = ["derive"] }
dbus = "0.9"
libc = "0.2"
