[package]
name = "pappl-rs"
description = "Safe, idiomatic Rust bindings for PAPPL (the Printer Application Programming Library)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pappl-sys = { path = "../pappl-sys" }
bitflags = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
