[package]
name = "supvan-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "supvan-printer-app"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pappl_1_4)'] }

[dependencies]
supvan-proto = { workspace = true }
pappl-sys = { path = "../pappl-sys" }
log = { workspace = true }
env_logger = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dbus = "0.9"
dbus-crossroads = "0.5"
libc = "0.2"
